@@ -375,10 +375,15 @@ form. [Matt Rolf with much work by Sarah Mercier]
 Fixed C<< Bric::Biz::Element::Field->get_max_length >> to correctly return the
 max_length. [Adrian Yee]
 
-=item * 
+=item *
 
 Fixed bug in L<auto_complete.html> so that lookups of parent categories now
 correctly use the site id [Rolf Schaufelberger, Paul Orrock]
+
+=item *
+
+Fixed bug where extra newlines after a C<=begin> without a default would result
+in an error. [Adrian Yee]
 
 =back
 
